syntax = "proto3";
option java_multiple_files = true;

package com.coolfish.hotfire.protocol.battle;
option java_package = "com.coolfish.hotfire.protocol.battle";
option csharp_namespace = "message";

message CSP_JoinMatch {
	int32 team = 1;
}

message PlayerInfo {
	int32 playerID = 1;
}

message SyncInfo{
	PlayerInfo playerInfo = 1;
}

message BeginMatch {
	int32 playerID = 1;
}

message CancelMatch {
	int32 playerID = 1;
}